[package]
name = "rs-gpt-chat"
version = "0.1.0"
edition = "2021"
authors = ["tommy"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
dirs = "3.0.2" 